Added setp four

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li>Step One</li>
       <li>Step Two</li>
       <li>Step Three</li>
+      <li>step four</li>
   </ol>
   <ul>
       <li>Ariana Grande</li>
